--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HealthWave</string>
+    <string name="app_name">HW</string>
     <string name="itemMenuMail">send mail</string>
     <string name="itemMenuCall">call operator</string>
     <string name="itemMenuSite">visite site</string>
@@ -23,5 +23,5 @@
     <string name="proove">"Підтвердження інформації"</string>
     <string name="hour">год.</string>
     <string name="uah"> грн</string>
-    <string name="digit_keyboard_font">fonts/DroidSerif-Regular.ttf</string>
+    <string name="digit_keyboard_font">fonts/Andika-R.ttf</string>
 </resources>
